<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/linearLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#d3e0ea"
    android:gravity="center"
    android:orientation="vertical"
    tools:context=".updateregistrer.UpdateRegistrerActivity">

    <TextView
        android:id="@+id/textViewIdentificacion"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/textViewIdentificacion"
        android:textColor="#144359"
        android:textSize="18sp"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/editTextActualizacionIdentificacion"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/hinteditTextVacio"
        android:importantForAutofill="no"
        android:inputType="number"
        android:text="@string/editTextActualizaIdentificacion"
        android:textColor="#144359"
        android:textSize="14sp" />

    <TextView
        android:id="@+id/textViewNombres"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/textViewNombres"
        android:textColor="#144359"
        android:textSize="18sp"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/editTextActualizacionNombres"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/hinteditTextVacio"
        android:importantForAutofill="no"
        android:inputType="textPersonName"
        android:text="@string/editTextActualizaNombres"
        android:textColor="#144359"
        android:textSize="14sp" />

    <TextView
        android:id="@+id/textViewApellidos"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/textViewApellidos"
        android:textColor="#144359"
        android:textSize="18sp"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/editTextActualizacionApellidos"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/hinteditTextVacio"
        android:importantForAutofill="no"
        android:inputType="textPersonName"
        android:text="@string/editTextActualizaApellidos"
        android:textColor="#144359"
        android:textSize="14sp" />

    <TextView
        android:id="@+id/textViewTelefono"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/textViewTelefono"
        android:textColor="#144359"
        android:textSize="18sp"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/editTextActualizacionTelefono"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/hinteditTextVacio"
        android:importantForAutofill="no"
        android:inputType="phone"
        android:text="@string/editTextActualizaTelefono"
        android:textColor="#144359"
        android:textSize="14sp" />

    <TextView
        android:id="@+id/textViewTemperatura"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/textViewTemperatura"
        android:textColor="#144359"
        android:textSize="18sp"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/editTextActualizacionTemperatura"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/hinteditTextVacio"
        android:importantForAutofill="no"
        android:inputType="numberDecimal"
        android:text="@string/editTextActualizaTemperatura"
        android:textColor="#144359"
        android:textSize="14sp" />

    <TextView
        android:id="@+id/textViewRol"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/textViewRol"
        android:textColor="#144359"
        android:textSize="18sp"
        android:textStyle="bold" />

    <Spinner
        android:id="@+id/spinnerActualizacionRol"
        android:layout_width="300dp"
        android:layout_height="wrap_content" />

    <Button
        android:id="@+id/botonActualizar"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:onClick="updateRegistrer"
        android:text="@string/botonActualizar"
        android:background="@drawable/button_rounded"
        android:textColor="#d3e0ea" />

    <FrameLayout
        android:layout_width="50dp"
        android:layout_height="50dp">

        <ProgressBar
            android:id="@+id/progressBarUpdateRegistrer"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:visibility="gone" />
    </FrameLayout>

</LinearLayout>