<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/linearLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#d3e0ea"
    android:gravity="center"
    android:orientation="vertical"
    tools:context=".readregistrer.ReadRegistrerActivity">


    <TextView
        android:id="@+id/textViewIdentificacion"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/textViewIdentificacion"
        android:textColor="#144359"
        android:textSize="18sp"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/editTextConsultaIdentificacion"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/hinteditTextIngreseIdentificacion"
        android:importantForAutofill="no"
        android:inputType="number"
        android:text="@string/editTextConsultaIdentificacion"
        android:textColor="#144359"
        android:textColorHint="#144359"
        android:textSize="14sp" />

    <TextView
        android:id="@+id/textViewNombres"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/textViewNombres"
        android:textColor="#144359"
        android:textSize="18sp"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/editTextConsultaNombres"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/hinteditTextVacio"
        android:importantForAutofill="no"
        android:inputType="textPersonName"
        android:text="@string/editTextConsultaNombres"
        android:textColor="#144359"
        android:textSize="14sp" />

    <TextView
        android:id="@+id/textViewApellidos"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/textViewApellidos"
        android:textColor="#144359"
        android:textSize="18sp"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/editTextConsultaApellidos"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/hinteditTextVacio"
        android:importantForAutofill="no"
        android:inputType="textPersonName"
        android:text="@string/editTextConsultaApellidos"
        android:textColor="#144359"
        android:textSize="14sp" />

    <TextView
        android:id="@+id/textViewTelefono"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/textViewTelefono"
        android:textColor="#144359"
        android:textSize="18sp"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/editTextConsultaTelefono"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/hinteditTextVacio"
        android:importantForAutofill="no"
        android:inputType="phone"
        android:text="@string/editTextConsultaTelefono"
        android:textColor="#144359"
        android:textSize="14sp" />

    <TextView
        android:id="@+id/textViewTemperatura"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/textViewTemperatura"
        android:textColor="#144359"
        android:textSize="18sp"
        android:textStyle="bold"  />

    <EditText
        android:id="@+id/editTextConsultaTemperatura"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/hinteditTextVacio"
        android:importantForAutofill="no"
        android:inputType="numberDecimal"
        android:textColor="#144359"
        android:textSize="14sp" />

    <TextView
        android:id="@+id/textViewRol"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/textViewRol"
        android:textColor="#144359"
        android:textSize="18sp"
        android:textStyle="bold" />

    <Spinner
        android:id="@+id/spinnerConsultaRol"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <Button
        android:id="@+id/botonConsultar"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:background="@drawable/button_rounded"
        android:backgroundTint="#144359"
        android:onClick="readRegistrer"
        android:text="@string/botonConsultarRegistro"
        android:textColor="#d3e0ea" />

    <FrameLayout
        android:layout_width="50dp"
        android:layout_height="50dp">

        <ProgressBar
            android:id="@+id/progressBarReadRegistrer"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:visibility="gone" />
    </FrameLayout>


</LinearLayout>