<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/linearLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#d3e0ea"
    android:gravity="center"
    android:orientation="vertical"
    tools:context=".deleteregistrer.DeleteRegistrerActivity">

    <TextView
        android:id="@+id/textViewIdentificacion"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/textViewIdentificacion"
        android:textColor="#144359"
        android:textSize="18sp"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/editTextIEliminacionIdentificacion"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/hinteditTextVacio"
        android:importantForAutofill="no"
        android:inputType="number"
        android:text="@string/editTextEliminaIdentificacion"
        android:textColor="#144359"
        android:textSize="14sp" />

    <Button
        android:id="@+id/botonEliminar"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:background="@drawable/button_rounded"
        android:onClick="deleteRegistrer"
        android:text="@string/botonEliminar"
        android:textColor="@color/white" />

    <FrameLayout
        android:layout_width="50dp"
        android:layout_height="50dp">

        <ProgressBar
            android:id="@+id/progressBarDeleteRegistrer"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:visibility="gone" />
    </FrameLayout>

</LinearLayout>